--- a/BioVitalAge/templates/includes/cartellaPazienteOld.html
+++ b/BioVitalAge/templates/includes/cartellaPazienteOld.html
@@ -174,6 +174,7 @@
         </div>
 
 
+
         <!-- MODALE INFORMAZIONI PERSONALI -->
         <div class="container-informazioni-personali">
             
@@ -620,8 +621,6 @@
         window.isSecretary = {{ is_secretary|yesno:"true,false" }};
     </script> 
 
-
-
 </body>
 </html>
 
@@ -914,7 +913,7 @@ SCRIPT JS PER MODALE
 
 
 
-  <!-- <div class="eta-container">
+<div class="eta-container">
                         <a href="{% url 'eta_biologica' persona.id %}" style="text-decoration: none; color: inherit;" title="Età Biologica">
                             <h3>Età Biologica</h3>
 
@@ -988,4 +987,3 @@ SCRIPT JS PER MODALE
 
 
 
--->
