--- a/BioVitalAge/static/css/cartellaPaziente.css
+++ b/BioVitalAge/static/css/cartellaPaziente.css
@@ -709,6 +709,9 @@
 .second-table{
   grid-template-columns: 50% 50%;
 }
+.diario-clinico-header{
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+}
 .container-header-diario-second{
   display: flex;
   justify-content: flex-end;
@@ -746,6 +749,10 @@
   align-items: center;
   padding: 10px;
   border: 1px solid #ddd;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
 }
 .row-cella p{
   margin: 0!important;
