Add modal to clinic diary & fix bug to unsave diagnosis

--- a/BioVitalAge/templates/components/navBarPatient.html
+++ b/BioVitalAge/templates/components/navBarPatient.html
@@ -45,7 +45,11 @@
                 {% if dottore.isSecretary %}
                     Segr. {{ dottore.cognome }}
                 {% elif dottore.user %}
-                    Dottor. {{ dottore.cognome }}
+                    {% if dottore.gender == "female" %}
+                        Dott.ssa {{ dottore.cognome }}
+                    {% else %}
+                        Dr. {{ dottore.cognome }}
+                    {% endif %}
                 {% else %}
                     Account Demo
                 {% endif %}
