--- a/BioVitalAge/templates/components/navBar.html
+++ b/BioVitalAge/templates/components/navBar.html
@@ -6,7 +6,7 @@
         <div class="col-md-2 d-flex nav-bar-logo">
             <a href="{% url 'HomePage' %}">
                 <img src="{% static 'image/Logo.png' %}" alt="logo_img" title="BioVitalAge®" />
-                <p>vers. 0.1</p>
+                <p>ver. 0.1</p>
             </a>
         </div>
 
@@ -18,7 +18,11 @@
                 {% if dottore.isSecretary %}
                     Segr. {{ dottore.cognome }}
                 {% elif dottore.user %}
-                    Dottore {{ dottore.cognome }}
+                    {% if dottore.gender == "female" %}
+                        Dott.ssa {{ dottore.cognome }}
+                    {% else %}
+                        Dr. {{ dottore.cognome }}
+                    {% endif %}
                 {% else %}
                     Account Demo
                 {% endif %}
