Fix open/close  modal & menu diary bug

--- a/BioVitalAge/templates/includes/cartellaPaziente.html
+++ b/BioVitalAge/templates/includes/cartellaPaziente.html
@@ -35,9 +35,7 @@
         <!-- JS Import -->
         <!-- Modale Prescrizioni -->
         <script src="{% static 'js/cartella_paziente/prescrizioni/PrescrizioniFarmaci.js' %}" defer type="module"></script>
-        <script>
-
-        </script>
+        <script src="{% static 'js/cartellaPaziente.js' %}" defer type="module" data-user="{{user.id}}'"></script>
 
         <style>
         .custom-modal {
